Adding phinx DB migration scripts as EBEXTENSIONS.

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 export APP_STAGE="DEVELOPMENT"
+export ASSETS_BASE_URL="http://mytelegram-env.eba-tk63u42j.us-east-1.elasticbeanstalk.com/"
+export RDS_HOSTNAME="aaxi8d8hwvvvyw.c2gglteuz97d.us-east-1.rds.amazonaws.com"
+export RDS_DB_NAME="ebdb"
+export RDS_USERNAME="fuzzito"
+export RDS_PASSWORD="e4ij&Z%aL43B?M3"
