--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,9 @@
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.17",
-        "robmorgan/phinx": "^0.6.4",
-        "slim/flash": "^0.1.0"
-    },
-    "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
+        "robmorgan/phinx": "^0.12.11",
+        "slim/flash": "^0.1.0",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload-dev": {
         "psr-4": {
