--- a/.ebextensions/10_run_migrations.config
+++ b/.ebextensions/10_run_migrations.config
@@ -1,7 +1,5 @@
 container_commands:
     50-run-db-migrations:
         command: "source /var/app/current/.env && composer.phar phinx migrate"
-        cwd: "/var/app/ondeck"
         ignoreErrors: false
-        env:
-            COMPOSER_HOME: /var/app/ondeck
+        leader_only: true
