--- a/.ebextensions/10_run_migrations.config
+++ b/.ebextensions/10_run_migrations.config
@@ -1,5 +1,5 @@
 container_commands:
-    50-run-db-migrations:
+    rundbmigrations:
         command: "source /var/app/current/.env && composer.phar phinx migrate"
         ignoreErrors: false
         leader_only: true
