--- a/.ebextensions/10_run_migrations.config
+++ b/.ebextensions/10_run_migrations.config
@@ -1,5 +1,5 @@
 container_commands:
     rundbmigrations:
-        command: "composer.phar phinx migrate"
+        command: "source .env composer.phar phinx migrate"
         ignoreErrors: false
         leader_only: true
